# pycodereview

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  security-scan.yml
src/: code_review.py
src/pycodereview/: __main__.py  code_review.py
tests/: conftest.py  test_cli_and_entry_points.py  test_cli_branches.py  test_core_branches.py  test_except_tuple_branch.py  test_helpers_and_outputs.py  test_json_csv_parity.py  test_main_branch.py  test_rules_basic.py  test_rules_extended.py  test_rules_matrix.py  test_rules_more.py  tests_all_in_one.py
tests/data/: sample_cases.py
