[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodereview"
version = "1.0.1"
description = "Static checks for common Python code risks and hygiene issues."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Sofian Daghsen", email = "sofianjava@gmail.com" }]
keywords = ["static analysis", "code review", "lint"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

# Runtime dependencies
dependencies = []

[project.urls]
Homepage = "https://github.com/sofiand-png/pycodereview"
Repository = "https://github.com/sofiand-png/pycodereview"
Issues = "https://github.com/sofiand-png/pycodereview/issues"
Changelog = "https://github.com/sofiand-png/pycodereview/blob/main/CHANGELOG.md"

[project.scripts]
pycodereview = "pycodereview.__main__:main"

[tool.coverage.run]
branch = true
source = ["src/pycodereview"]
omit = ["*/site-packages/*", "*/dist-packages/*", "*/.venv/*", "*/venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
